# enem-puzzle.api

./: .env-example  README.md  app.py  main.py  pyproject.toml  requirements.txt
API/: main.py
application/API/: main.py
database/mongodb/model/: question.py
domain/entities/: area.py  question.py
domain/repositories/: questionRepository.py
infra/database/mongodb/: settings.py
infra/database/mongodb/repository/: questionRepository.py
src/: main.py
src/API/: app.py
src/API/routes/: answer.py  question.py  questions.py
src/API/schemas/: answer.py  question.py
src/application/API/routes/: question.py
src/data/enemdb/: settings.py
src/database/enemDB/: settings.py
src/database/enemDB/repository/: question.py
src/database/mongodb/seeders/: questions.json
src/domain/entities/: answer.py  area.py
src/domain/repositories/: answerRepository.py
src/domain/useCases/: questionUseCase.py
src/services/: answer.py  question.py
src/test/unit/: test_answerQuestion.py  test_serviceAnswerQuestion.py  test_serviceQuestion.py
src/utils/: parseMongoDocument.py
