[tool.poetry]
name = "enem-puzzle-api"
version = "0.1.0"
description = ""
authors = ["arthurMSA <arthurmarcelosantanaalves@hotmail.com>"]
readme = "README.md"
packages = [{include = "enem_puzzle"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pylint = "^3.0.3"
python-dotenv = "^1.0.1"
pytest = "^8.0.1"
beanie = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
